# graphpipe-py

./: CONTRIBUTING.md  Makefile  README.md  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
examples/identity_example/: README.md  client.py  server.py
examples/sklearn_example/: README.md  client.py  server.py
graphpipe/: convert.py  remote.py
graphpipe/graphpipefb/: Error.py  IOMetadata.py  InferRequest.py  InferResponse.py  MetadataRequest.py  MetadataResponse.py  Req.py  Request.py  Tensor.py  Type.py  __init__.py
tests/: convert_test.py
