[metadata]
version=0.0.1
name = libgraphpipe
summary = Graphpipe client and helpers
description-file =
    README.md
author = OCI ML Team
author-email = internal@oracle.com
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6

[files]
packages =
    libgraphpipe
package_data =
    libgraphpipe = remote_op.so
